tests/compilefail20.out
[1mtests/compilefail20.pas:1:38: [0m[1m[91merror:[0m Symbol Redefined: input
     1 | program compilefail20(input, output, input);