tests/compilefail20.pas
program compilefail20(input, output, input);
{test duplicate program parameters}

begin
	writeln('hello world');
end.
